# Simple_http_server

./: CMakeLists.txt  README.md
include/: index.html  web_server.hpp
src/: main.cpp  web_server.cpp
